erDiagram
    USERS ||--o{ PURCHASE_ORDERS : creates
    USERS ||--o{ GOODS_RECEIPTS : creates
    USERS ||--o{ GOODS_ISSUES : creates
    USERS ||--o{ STOCKTAKES : performs
    USERS ||--o{ AI_INTERACTION_LOGS : invokes
    CATEGORIES ||--o{ GOODS : groups
    SUPPLIERS ||--o{ PURCHASE_ORDERS : receives
    SUPPLIERS ||--o{ GOODS_RECEIPTS : delivers
    SUPPLIERS ||--o{ SUPPLIER_INVOICES : issues
    PURCHASE_ORDERS ||--o{ PURCHASE_ORDER_ITEMS : contains
    GOODS ||--o{ PURCHASE_ORDER_ITEMS : ordered
    GOODS_RECEIPTS ||--o{ GOODS_RECEIPT_ITEMS : contains
    GOODS ||--o{ GOODS_RECEIPT_ITEMS : received
    GOODS_ISSUES ||--o{ GOODS_ISSUE_ITEMS : contains
    GOODS ||--o{ GOODS_ISSUE_ITEMS : issued
    STOCKTAKES ||--o{ STOCKTAKE_ITEMS : contains
    GOODS ||--o{ STOCKTAKE_ITEMS : counted
    GOODS_RECEIPTS ||--o| SUPPLIER_INVOICES : generates
    SUPPLIER_INVOICES ||--o{ SUPPLIER_PAYMENTS : paid

    USERS {
        int id PK
        string username UK
        string password_hash
        string role
        boolean is_active
    }
    CATEGORIES {
        int id PK
        string name UK
    }
    SUPPLIERS {
        int id PK
        string name
        string phone
        string email
        string status
    }
    GOODS {
        int id PK
        int category_id FK
        int preferred_supplier_id FK
        string sku UK
        string name
        string unit
        int quantity_on_hand
        int min_stock
        int max_stock
        decimal selling_price
        string status
    }
    PURCHASE_ORDERS {
        int id PK
        int supplier_id FK
        int created_by FK
        date order_date
        string status
    }
    PURCHASE_ORDER_ITEMS {
        int id PK
        int po_id FK
        int goods_id FK
        int quantity_ordered
        decimal unit_price
    }
    GOODS_RECEIPTS {
        int id PK
        int po_id FK
        int supplier_id FK
        int created_by FK
        datetime received_date
    }
    GOODS_RECEIPT_ITEMS {
        int id PK
        int receipt_id FK
        int goods_id FK
        int quantity
        decimal unit_price
    }
    GOODS_ISSUES {
        int id PK
        int created_by FK
        datetime issued_date
        string note
    }
    GOODS_ISSUE_ITEMS {
        int id PK
        int issue_id FK
        int goods_id FK
        int quantity
    }
    STOCKTAKES {
        int id PK
        int created_by FK
        int approved_by FK
        datetime stocktake_date
        string status
    }
    STOCKTAKE_ITEMS {
        int id PK
        int stocktake_id FK
        int goods_id FK
        int system_quantity
        int actual_quantity
        int difference
        string action
    }
    SUPPLIER_INVOICES {
        int id PK
        int supplier_id FK
        int receipt_id FK
        string invoice_number
        decimal total_amount
        string payment_status
    }
    SUPPLIER_PAYMENTS {
        int id PK
        int invoice_id FK
        decimal amount
        date payment_date
    }
    AI_INTERACTION_LOGS {
        int id PK
        int user_id FK
        string feature_type
        string prompt_input
        string ai_response
        datetime created_at
    }
